Wed Feb 26 16:49:17 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-106.xml
	  tests/general/Makefile.am tests/general/bug-106*: added the next
	  example for bug #106788 from James Clark in the regression tests,
	  the bug fix is actually in libxml2

Tue Feb 25 16:19:45 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/Makefile.am xsltproc/Makefile.am: some cleanup
	  for Python checks, makefile cleanup, and convenience changes

Mon Feb 24 23:49:01 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: had to comment out Igor last change
	  since it made libxslt-1.0.27 depends on libxml2 newly 
	  API extension which hasn't propagated yet :-(

Mon Feb 24 22:21:09 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing release 1.0.27
	* doc/*: updated and rebuilt the docs

Mon Feb 24 19:43:15 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/namespaces.c: fixed #106554 for spurious xmlns:nsX=""
	  generation

Sun Feb 23 14:52:57 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-105.xml
	  tests/general/Makefile.am tests/general/bug-105*: added the
	  example for bug #106788 from James Clark in the regression tests,
	  the bug fix is actually in libxml2

Sun Feb 23 14:25:13 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/namespaces.c libxslt/transform.c: fixed bug #106789 from
	  James Clark and a bit of cleanup
	* tests/docs/Makefile.am tests/docs/bug-104.xml
	  tests/general/Makefile.am tests/general/bug-104*: added the
	  example in the regression tests for this case

Fri Feb 21 17:07:59 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in: fixed RH#84801 wrong prereqs in the spec file

Wed Feb 19 18:51:06 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* libxslt/functions.c libxslt/xslt.c: fixed bug 106251

Wed Feb 19 15:52:33 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>
