@@ -111,6 +111,7 @@ EXTRA_DIST = \
     bug-104.out bug-104.xsl \
     bug-105.out bug-105.xsl \
     bug-106.out bug-106.xsl \
+    bug-107.out bug-107.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
